Moved to subfolder MicroCreations.Core

--- a/.gitignore
+++ b/.gitignore
@@ -235,3 +235,4 @@ bin/
 # exclude upload folder
 uploads/
 /.vs/MicroCreations.Core/v15/Server/sqlite3
+/MicroCreations.Core/.vs/MicroCreations.Core/v15/Server/sqlite3
