Renamed project to MicroCreations.Batch refactored code in BatchAggregator for parallel and serial in seperate processors removed Parallel.ForEach, used Dataflow block Added IRequestBuilder and IRequestBuilderFactory removed synchronous calls, added async calls added castle windsor registration project

--- a/.gitignore
+++ b/.gitignore
@@ -237,3 +237,6 @@ uploads/
 /.vs/MicroCreations.Core/v15/Server/sqlite3
 /MicroCreations.Core/.vs/MicroCreations.Core/v15/Server/sqlite3
 /.vs
+*.ide
+*.ide-shm
+*.ide-wal
