--- a/MicroCreations.Batch/MicroCreations.Batch/MicroCreations.Batch.csproj
+++ b/MicroCreations.Batch/MicroCreations.Batch/MicroCreations.Batch.csproj
@@ -32,10 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -52,25 +48,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BatchException.cs" />
-    <Compile Include="Operations\BatchOperationRequest.cs" />
-    <Compile Include="Operations\BatchOperationResponse.cs" />
-    <Compile Include="Context\IContext.cs" />
-    <Compile Include="Context\IContextBuilder.cs" />
     <Compile Include="IBatchAggregator.cs" />
-    <Compile Include="Operations\IOperationExecutor.cs" />
     <Compile Include="Processors\BaseProcessor.cs" />
     <Compile Include="Processors\IProcessor.cs" />
-    <Compile Include="Builders\IRequestBuilder.cs" />
-    <Compile Include="Builders\IRequestBuilderFactory.cs" />
-    <Compile Include="Operations\Operation.cs" />
-    <Compile Include="Operations\OperationArgument.cs" />
-    <Compile Include="Context\BatchExecutionContext.cs" />
-    <Compile Include="Operations\OperationResult.cs" />
     <Compile Include="ProcessRequest.cs" />
-    <Compile Include="FaultCancellationOption.cs" />
-    <Compile Include="ProcessingType.cs" />
-    <Compile Include="Extensions.cs" />
     <Compile Include="BatchAggregator.cs" />
     <Compile Include="Processors\ParallelProcessor.cs" />
     <Compile Include="Processors\SerialProcessor.cs" />
@@ -80,7 +61,12 @@
     <None Include="MicroCreations.Batch.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\MicroCreations.Batch.Common\MicroCreations.Batch.Common.csproj">
+      <Project>{0cf63ccf-fccb-439a-959a-56c1f2bd7378}</Project>
+      <Name>MicroCreations.Batch.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
