--- a/MicroCreations.Batch/MicroCreations.Batch.Tests/MicroCreations.Batch.Tests.csproj
+++ b/MicroCreations.Batch/MicroCreations.Batch.Tests/MicroCreations.Batch.Tests.csproj
@@ -63,6 +63,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MicroCreations.Batch.Common\MicroCreations.Batch.Common.csproj">
+      <Project>{0cf63ccf-fccb-439a-959a-56c1f2bd7378}</Project>
+      <Name>MicroCreations.Batch.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MicroCreations.Batch\MicroCreations.Batch.csproj">
       <Project>{06F3E200-BDE8-473F-8A58-461BD1D362EB}</Project>
       <Name>MicroCreations.Core.OperationAggregation</Name>
