--- a/MicroCreations.Batch/MicroCreations.Batch/MicroCreations.Batch.csproj
+++ b/MicroCreations.Batch/MicroCreations.Batch/MicroCreations.Batch.csproj
@@ -36,10 +36,6 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Remoting" />
-    <Reference Include="System.Threading.Tasks.Dataflow, Version=4.5.24.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Tpl.Dataflow.4.5.24\lib\portable-net45+win8+wpa81\System.Threading.Tasks.Dataflow.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -50,7 +46,9 @@
   <ItemGroup>
     <Compile Include="IBatchAggregator.cs" />
     <Compile Include="Processors\BaseProcessor.cs" />
+    <Compile Include="Processors\DependencyProcessor.cs" />
     <Compile Include="Processors\IProcessor.cs" />
+    <Compile Include="Processors\ProcessorType.cs" />
     <Compile Include="ProcessRequest.cs" />
     <Compile Include="BatchAggregator.cs" />
     <Compile Include="Processors\ParallelProcessor.cs" />
@@ -59,13 +57,17 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="MicroCreations.Batch.nuspec" />
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MicroCreations.Batch.Common\MicroCreations.Batch.Common.csproj">
       <Project>{0cf63ccf-fccb-439a-959a-56c1f2bd7378}</Project>
       <Name>MicroCreations.Batch.Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Tpl.Dataflow">
+      <Version>4.5.24</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
