--- a/MicroCreations.Batch/MicroCreations.Batch.Tests/App.config
+++ b/MicroCreations.Batch/MicroCreations.Batch.Tests/App.config
@@ -2,5 +2,6 @@
 <configuration>
   <appSettings>
     <add key="MicroCreations_Core_OperationsAggregation_MaxDegreeOfParallelism" value="2"/>
+    <add key="MicroCreations_Batch_MaxDependencyGraphDepth" value="5"/>
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/></startup></configuration>
