--- a/MicroCreations.Batch/MicroCreations.Batch.Tests/MicroCreations.Batch.Tests.csproj
+++ b/MicroCreations.Batch/MicroCreations.Batch.Tests/MicroCreations.Batch.Tests.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="BatchAggregatorTests.cs" />
     <Compile Include="Processors\BaseProcessorTests.cs" />
+    <Compile Include="Processors\DependencyProcessorTests.cs" />
     <Compile Include="Processors\ParallelProcessorTests.cs" />
     <Compile Include="Processors\SerialProcessorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
